<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewLogo"
        android:layout_width="203dp"
        android:layout_height="43dp"
        android:fontFamily="monospace"
        android:includeFontPadding="false"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/number_field_two"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/firstField"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewLogo"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/textViewLogo"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogo"
        app:layout_constraintVertical_bias="0.07"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="61dp"
        android:layout_height="48dp"
        android:background="#2C0505"
        android:text="@string/buttonDivide"
        app:backgroundTint="#00595151"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/number_field_one"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/secondField"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/number_field_two"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/number_field_two"
        app:layout_constraintTop_toBottomOf="@+id/number_field_two"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="61dp"
        android:layout_height="48dp"
        android:background="#2C0505"
        android:text="@string/buttonMinus"
        app:backgroundTint="#00595151"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="61dp"
        android:layout_height="48dp"
        android:background="#2C0505"
        android:text="@string/buttonMultiply"
        app:backgroundTint="#00595151"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/firstResultOfSum"
        android:layout_width="89dp"
        android:layout_height="27dp"
        android:layout_marginTop="152dp"
        android:text="@string/firstResultOfSum"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/number_field_one"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/number_field_one"
        app:layout_constraintTop_toBottomOf="@+id/number_field_one"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="61dp"
        android:layout_height="48dp"
        android:background="#2C0505"
        android:text="@string/buttonPlus"
        app:backgroundTint="#00595151"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="600dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonSupport"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonSupport"
            app:backgroundTint="@color/layoutButton"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/buttonDonate"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonDonate"
            app:backgroundTint="@color/layoutButton"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/buttonSecret"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonSecret"
            app:backgroundTint="@color/layoutButton"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>